<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_code"
            android:title="@string/code" />
        <item
            android:id="@+id/nav_question"
            android:title="@string/question" />
        <item
            android:id="@+id/nav_meditation_diary"
            android:title="@string/meditation_diary" />
        <item
            android:id="@+id/nav_youtube_tag"
            android:title="@string/youtube_tag" />
    </group>

    <item android:title="@string/share_wisdom">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share_wisdom_with_sungsung" />
            <item
                android:id="@+id/nav_walk_sungsung"
                android:title="@string/feat_sungsung_walker" />
        </menu>
    </item>
    <item android:title="@string/app_info">
        <menu>
            <item
                android:id="@+id/nav_refresh_mind_center"
                android:title="@string/refresh_mind_center" />
            <item
                android:id="@+id/nav_youtube"
                android:title="@string/youtube_doin" />
            <item
                android:id="@+id/nav_naver_cafe"
                android:title="@string/naver_cafe" />
            <item
                android:id="@+id/nav_kakao"
                android:title="@string/kakao_open_chat" />
        </menu>
    </item>

</menu>
